apps/overlays/dev/kek-project/kek-redis/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kek-redis
spec:
  template:
    spec:
      containers:
      - name: kek-redis
        image: redis:6.2
