apps/overlays/dev/kek-project/kek-redis/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kek-redis
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: "kek-app.dev.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kek-redis
            port:
              number: 80
